# anon-tokyo

./: .gitignore  PROJECT_MEMORY.md  README.md  pyproject.toml  train_prediction.py  train_sim.py  visualize.py
configs/prediction/: anon_tokyo.yaml  drope_ablation.yaml  mtr_baseline.yaml  rope_ablation.yaml  sine_ablation.yaml
configs/simulation/: agent_centric_ppo.yaml  anon_tokyo_ppo.yaml  query_centric_ppo.yaml
scripts/: bench_read.py  build_mtr_ops.sh  check_prediction_invariance.py  eval.sh  eval_sim.py  eval_womd.py  export_predictions.py  pack_shards.py  preprocess_womd.py  run_preprocess.sh  train.sh  verify_npz.py  visualize.py
src/anon_tokyo/apps/: web_visualizer.py
src/anon_tokyo/data/: datamodule.py  mtr_transform.py  shard_io.py  transforms.py  womd_dataset.py
src/anon_tokyo/nn/: attention.py  layers.py  polyline_encoder.py  rope.py
src/anon_tokyo/prediction/: lit_module.py  loss.py  metrics.py
src/anon_tokyo/prediction/anon_tokyo/: decoder.py  encoder.py  model.py
src/anon_tokyo/prediction/mtr/: attention.py  decoder.py  encoder.py  model.py  preprocessing.py
src/anon_tokyo/simulation/: __init__.py  dynamics.py  env.py  metrics.py  ppo.py  profiling.py  rewards.py
src/anon_tokyo/simulation/anon_tokyo/: model.py  (+3 more)
src/anon_tokyo/utils/: geometry.py
src/anon_tokyo/visualize/: __init__.py  serialize.py
tests/: test_attention.py  test_decoder.py  test_encoder.py  test_loss.py  test_model.py  test_mtr_attention_ops.py  test_preprocessing.py  test_rope.py  test_shard_io.py  test_simulation.py  test_transforms.py  test_visualize_serialize.py
(+59 files in other folders)
